[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-ids"
version = "0.1.0"
description = "Mini Network Intrusion Detection System"
authors = [{name = "Mete"}]
requires-python = ">=3.10"
dependencies = ["scapy>=2.5.0"]

[tool.setuptools.packages.find]
where = ["src"]